<resources>
    <string name="app_name">Login App</string>
    <string name="user">User</string>
    <string name="login_page">Login Page</string>
    <string name="user_name">User Name</string>
    <string name="username"></string>
    <string name="password">Password</string>
    <string name="attempts">Attempts</string>
    <string name="login">Login</string>
    <string name="second_page">Welcome to the Second Page</string>
</resources>